# ARC

./: .gitignore  README.md  config.json  pyproject.toml
configs/: checkpoints.json  stage1_mixed_pretrain.json  stage1_text_mix.jsonl  stage2_curriculum.json  stage2_vl_mix_coco_only.jsonl
models/: README.md
models/arc-124m-vl/configs/: arc_tiny_smoke.json  sharegpt4v_filter.json  stage2_vl_mix.jsonl
models/arc-124m-vl/reports/: arc124_vl_architecture_report.summary.json
models/arc-124m-vl/runpod/: README.md  create_h100_pod.sh  create_volume.sh  install_pod_deps.sh  status_stage1.sh  train_stage1.sh
models/arc-124m-vl/scripts/: benchmark_gate.py  generate_architecture_report.py  shard_images.py  shard_text.py
models/arc-mini/: README.md  config.json  index.html  pyproject.toml
models/arc-mini/configs/: arc_tiny_smoke.json  checkpoints.json  stage1_text_mix.jsonl
models/arc-mini/runpod/: README.md  create_prep_pod.sh  create_train_pod.sh  create_volume.sh  install_pod_deps.sh  package_repo.sh  prep_mini_vl.sh  status_stage1.sh  (+5 more)
models/arc-pico/: .gitignore  README.md  config.json  index.html  pyproject.toml
runpod/: README.md  create_h100_pod.sh  create_prep_pod.sh  package_repo.sh  prep_stage1_tokens.sh  start_stage1_nohup.sh  train_stage1_mixed.sh  upload_checkpoints_hf.sh
scripts/: benchmark_train.py  filter_sharegpt4v.py  make_tiny_text_fixture.py  make_tiny_vl_corpus.py  plot_training_log.py  prepare_coco.py  train_tokenizer.py  validate_image_use.py
src/arc/: data_text.py  throughput.py  tokenizer.py  train.py  train_mixed.py  training_plan.py
(+53 files in other folders)
